--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
     "ms": "^2.1.3",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.2",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
@@ -39,6 +39,7 @@
     "yallist": "^4.0.0"
   },
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
