--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "is-number": "^7.0.0",
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
+    "mongoose": "^8.1.0",
     "ms": "^2.1.3",
     "nodemon": "^3.0.2",
     "nopt": "^1.0.10",
