--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concat-map": "^0.0.1",
     "debug": "^3.2.7",
     "fill-range": "^7.0.1",
+    "formidable": "^3.5.1",
     "glob-parent": "^5.1.2",
     "has-flag": "^3.0.0",
     "ignore-by-default": "^1.0.1",
