--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "minimatch": "^3.1.2",
     "mongoose": "^8.1.0",
     "ms": "^2.1.3",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.0.2",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
