--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "scripts": {
     "start": "set NODE_ENV=staging && nodemon index",
-    "production": "set NODE_ENV=production&& nodemon index",
+    "production": "set NODE_ENV=production&& node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
