--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "yallist": "^4.0.0"
   },
   "scripts": {
-    "start": "set NODE_ENV=staging && nodemon index",
-    "production": "set NODE_ENV=production&& node index.js",
+    "dev": "PORT=5050 NODE_ENV=staging nodemon index.js",
+    "start": "NODE_ENV=staging nodemon index.js",
+    "production": "NODE_ENV=production node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
