--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.1.0",
     "ms": "^2.1.3",
     "nodemailer": "^6.9.11",
+    "ping": "^0.4.4",
     "nodemon": "^3.0.2",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
