--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "braces": "^3.0.2",
     "chokidar": "^3.5.3",
     "concat-map": "^0.0.1",
+    "cors": "^2.8.5",
     "debug": "^3.2.7",
+    "express": "^5.1.0",
     "fill-range": "^7.0.1",
     "formidable": "^3.5.1",
     "glob-parent": "^5.1.2",
     "has-flag": "^3.0.0",
+    "helmet": "^8.1.0",
     "ignore-by-default": "^1.0.1",
     "is-binary-path": "^2.1.0",
     "is-extglob": "^2.1.1",
@@ -27,11 +30,11 @@
     "mongoose": "^8.1.0",
     "ms": "^2.1.3",
     "nodemailer": "^6.9.11",
-    "ping": "^0.4.4",
     "nodemon": "^3.0.2",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
+    "ping": "^0.4.4",
     "pstree.remy": "^1.1.8",
     "readdirp": "^3.6.0",
     "semver": "^7.5.4",
