--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.0",
     "fill-range": "^7.0.1",
     "formidable": "^3.5.1",
     "glob-parent": "^5.1.2",
